@@ -1,13 +1,13 @@
 <VSTemplate Version="3.0.0" xmlns="http://schemas.microsoft.com/developer/vstemplate/2005" Type="Item">
   <TemplateData>
-    <DefaultName>View.cshtml</DefaultName>
-    <Name>Orchard View</Name>
-    <Description>Orchard View</Description>
+    <DefaultName>Validation.cs</DefaultName>
+    <Name>Orchard Custom Model Validation</Name>
+    <Description>Orchard Custom Model Validation</Description>
     <ProjectType>CSharp</ProjectType>
     <SortOrder>10</SortOrder>
     <Icon>OrchardLogo_bw.png</Icon>
   </TemplateData>
   <TemplateContent>
-    <ProjectItem SubType="Code" TargetFileName="$safeitemname$.cshtml" ReplaceParameters="true">View.cshtml</ProjectItem>
+    <ProjectItem SubType="Code" TargetFileName="$safeitemname$.cs" ReplaceParameters="true">CustomValidation.cs</ProjectItem>
   </TemplateContent>
 </VSTemplate>
