@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="TemplateBuilder" version="1.0.3.18-beta" targetFramework="net45" />
+  <package id="TemplateBuilder" version="1.0.3.21-beta" targetFramework="net45" />
 </packages>
