@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <PackageManifest Version="2.0.0" xmlns="http://schemas.microsoft.com/developer/vsx-schema/2011" xmlns:d="http://schemas.microsoft.com/developer/vsx-schema-design/2011">
   <Metadata>
-    <Identity Id="690a4473-ae14-43f9-93af-955b5614a779" Version="0.1" Language="en-US" Publisher="CIBG" />
+    <Identity Id="690a4473-ae14-43f9-93af-955b5614a779" Version="0.2" Language="en-US" Publisher="CIBG" />
     <DisplayName>Orchard Seeds</DisplayName>
     <Description xml:space="preserve">A collection of Orchard templates to grow a great Orchard</Description>
     <MoreInfo>http://orchardproject.net</MoreInfo>
